--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ torchvision = "0.15.1"
 black = "^23.9.1"
 flake8 = "^6.1.0"
 numpy = "^1.26.0"
+matplotlib = "^3.8.0"
+tqdm = "^4.66.1"
+scikit-learn = "^1.3.1"
+ipython = "^8.16.1"
 
 
 [build-system]
