--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ matplotlib = "^3.8.0"
 tqdm = "^4.66.1"
 scikit-learn = "^1.3.1"
 ipython = "^8.16.1"
+pandas = "^2.1.1"
+wget = "^3.2"
 
 
 [build-system]
